Changelog
=========

1.2.dev0 - (unreleased)
-----------------------

1.1 - (2015-03-17)
------------------
* Change: Switched to curl in the jenkins build install script
  [olimpiurob refs #22402]
* Change: Changed fetch url for jenkins build install script to the install 
  script from the main EEA CPB repository
  [olimpiurob refs #22402]

1.0 - (2014-10-15)
------------------
- Initial release
